<resources>
    <string name="app_name">observatory</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_button_title">About</string>
    <string name="menu_telescopes_button_title">Telescopes</string>
    <string name="menu_history_button_title">History</string>
    <string name="menu_events_button_title">Events</string>
    <string name="menu_weather_button_title">Weather</string>
    <string name="menu_game_button_title">Game</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_telescopes">Telescopes</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_weather">Weather</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_staff">Staff</string>
    <string name="ulo_logo">ULO</string>
    <string name="homescreen_button">"\n\n""\n\n""\n\n""\n\n""\n\n""\n\n""\n\n""\n\n""\n\n"Touch to continue</string>
    <string name="ulo_about">The University of London Observatory is a hands-on teaching observatory and is part of the Astrophysics Group at UCLs Department of Physics and Astronomy."\n\n"
We are equipped with five permanently mounted telescopes, two computer classrooms and a specialist astronomy library. Our reasonable proximity to the main campus, and the provision of regular classes, ensure that students have good access to the telescopes."\n\n"
In addition to observing, students are trained in data-reduction techniques, the practical applications of astrophysical theory, and computational astronomy. This training can take place in the context of an undergraduate degree module, a student project, or, for interested members of the public, as part of our further-education Certifcate in Astronomy."\n\n"
ULO remains active in scientific inquiry, with a strong observational research programme in extrasolar planets. We are in the process of expanding our observing capabilities with the development of unattended (remote and robotic) observing modes, which we hope will culminate in a new large robotic telescope, a project for which funding is currently underway."\n\n"
We offer guided tours to the public (booking required), and are actively engaged in outreach activities to schools. We are honoured to be affiliated to the Worshipful Company of Clockmakers.</string>
	<string name="ulo_address_title">Address</string>
    <string name="ulo_address">University of London Observatory"\n"553 Watford Way"\n"Mill Hill Park"\n"London"\n"NW7 2QS</string>
    <string name="ulo_finding_title">Finding ULO</string>
    <string name="ulo_finding">The Observatory is located off the northbound carriageway of the A1 in Mill Hill, North London. (There is no vehicular access from the southbound carriageway; pedestrians on the southbound side of the road must use the under-road subway just north of the Observatory.) It is easily reached by public transport."\n\n"
We discourage arrival by car; entry to the site from the Watford Way is hazardous, and there is no parking for tour visitors on site. A large, free public car park is located nearby Daws Lane (postcode for satnav is NW7 4SL. The route to ULO is via the A1 pedestrian underpass, most easily reached from the alley that runs along the western side of Royal Mail Mill Hill Delivery Office). Parking is also available in the Mill Hill Broadway railway-station car park in Bunns Lane (pay and display, but free after 18:30)."\n\n"
Disabled visitors should contact us in advance to enquire about access; note that the site is not wheelchair-friendly, and has steep stairways.</string>
    <string name="ulo_staff_title">Staff</string>
    <string name="ulo_staff_button">Please click here for a list of the ULO staff</string>
    <string name="ulo_contact_title">Contact</string>
    <string name="ulo_contact"><b>Telephone: +44 (0) 203 108 1613</b>"\n"Administrative office (Dr Fanghanel); all general enquiries, including public visits, schools visits, etc."\n\n"<b>Email: a.fanghanel@ucl.ac.uk</b>"\n"Administrative office (Dr Fanghanel)</string>
    <string name="ulo_website_title">Website</string>
    <string name="ulo_website"><a ref="http://www.ulo.ucl.ac.uk"><b>www.ulo.ucl.ac.uk</b></a></string>
    <string name="history_foundation_button">Foundation</string>
    <string name="history_prewarexpansion_button">Pre-War Expansion</string>
    <string name="history_thewaryears_button">The War Years</string>
    <string name="history_postwarexpansion_button">Post-War Expansion</string>
    <string name="history_ulotoday_button">ULO Today</string>
    <string name="history_foundation">In 1925 Mr J. G. Wilson offered to the University of London a 24-inch reflecting telescope owned by his late father, Dr W. E. Wilson, FRS. The telescope had been built by Grubb of Dublin in 1881 and was located at W. E. Wilsons private observatory in Daramona, County Westmeath, Ireland. The gift was accepted. After consideration of many sites for the permanent location of the telescope an agreement was reached with Hendon Urban District Council to lease a site in Mill Hill Park for 999 years at a nominal rent. The Senate of the University raised the £5,000 cost of constructing a suitable building and additional funds were provided by University, Kings, Bedford and East London (now Queen Mary and Westfield) Colleges and from the London School of Economics."\n\n"The Observatory building was designed by Mr L. Rome Guthrie and constructed by Messrs Leslie and Co.; construction commenced in July 1928 and was completed in 1929. The Observatory was opened by the then Astronomer Royal, Sir Frank Dyson, on 1929 October 8.</string>
    <string name="history_prewarexpansion">The original reinforced concrete observatory building contained the dome for the Wilson 24-inch reflector, a Solar spectrographic laboratory and darkroom, a computing room and a workshop. In January 1930, Mr H.R. Fry of Barnet presented the University with an 8-inch refractor made by Cooke of York in 1862: Mr Fry met most of the cost of its reconditioning and subsequent re-erection. A new small building was erected in 1931 to house the Fry refractor."\n\n"
        In 1934 the Radcliffe Observatory (then at Oxford) was being relocated near Pretoria in South Africa; the Radcliffe Trustees offered the University the twin 24-inch/18-inch astrographic refractor made by Grubb of Dublin in 1901 The offer was accepted and the telescope was dismantled and brought to London in 1935 together with its dome and rising floor. Additional land was rented from Hendon Urban District Council and a new building was constructed between 1937 and July 1938. The building cost £2300, with an additional £1000 for auxiliary equipment and furnishings and for the re-erection of the telescope, dome and rising floor. The new building was opened by the Astronomer Royal, Sir Harold Spencer Jones, on July 1st 1938.</string>
    <string name="history_ulotoday">Building works completed in 2000 provided a new structure on the Observatorys southern perimeter to house three telescopes (including the restored Fry refractor and a Celestron C14), refurbished and expanded classroom areas, and much-needed office and workshop space. In the other domes, the Allen Telescope has as its main instrument a spectrograph with a CCD detector, and the use of photographic plates on the Radcliffe Telescope has been superceded by video imaging and large-format CCDs. CCD cameras are also used on other telescopes, both for educational and training purposes, and for an active research programme studying extrasolar planets."\n\n"
        A second C14 telescope was installed in 2009, part of a strategy to open up opportunities for "unattended observing", whereby data can be acquired under remote or robotic operation. Our ambitious development project aims to provide a modern, metre-class telescope for training and research purposes, which will also be under computer control and have remote/robotic capabilities."\n\n"
        Teaching has historically been focussed on the introductory first-year courses (including, since 2008, programmes for all Physics students), third-year advanced practical teaching, and 4th-year project work. Third-year students can also opt for a one-week field trip to the Observatoire de Haute Provence, supervised by Observatory staff, for intensive observing experience at a dark-sky site."\n\n"
        Beginning in 2001, the teaching of astronomy at the Observatory expanded to provide for students enrolled in a part-time evening course at UCL, the popular Certificate of Higher Education in Astronomy. Public and school visits each year typically involve of order 1000 visitors per year who tour the premises and look through telescopes if conditions permit. On a single day in 2004, the Observatory was host to 560 visitors who arrived from 6.00am onwards to view the historic Transit of Venus on June 8th."\n\n"
        Computing facilities at the Observatory and Annexe have been continually updated over the years, from hand cranked Brunsviga calculators in the 1940s to the current network of powerful servers, Linux workstations and PCs for staff and students.</string>
    <string name="history_foundation_image">Mr C. R. Spratt and the Radcliffe Dex axle</string>
    <string name="history_ulotoday_image">The observatory as it is today</string>
    <string name="telescopes_intro">ULO has 5 permanently mounted telescopes, which are used primarily for undergraduate training and for research projects with student participation. The permanently mounted telescopes are:</string>
    <string name="telescopes_telescope1_button">The Radcliffe 18/24-inch Double Refractor</string>
    <string name="telescopes_telescope2_button">The Allen 24-inch Reflector</string>
    <string name="telescopes_telescope34_button">The Celestron C14 14-inch Reflectors</string>
    <string name="telescopes_telescope5_button">The Fry 8-inch Refractor</string>
    <string name="staff1">Prof. Ian Howarth</string>
    <string name="staff2">Dr Peter Thomas</string>
    <string name="staff3">Dr Alexandra Fanghanel</string>
    <string name="staff4">Stephen Boyle</string>
    <string name="staff5">Dr Francisco Diego</string>
    <string name="staff6">Dr Mike Dworetsky</string>
    <string name="staff7">Dr Steve Fossey</string>
    <string name="staff8">Mrs Maureen Evans</string>
    <string name="staff9">Mrs Julie Fitzgerald</string>
    <string name="staff10">Mick Pearson</string>
    <string name="staff11">Thomas Schlichter</string>
    <string name="staff12">Dr Athem Alsabti</string>
    <string name="staff_administration_title">Administration</string>
    <string name="staff_teaching_title">Teaching</string>
    <string name="staff_support_title">Support</string>
    <string name="events_title">News &amp; Events</string>
    <string name="events_button_title1">ULO Affiliates to the Worshipful Company of Clockmakers</string>
    <string name="events_button_title2">First Light for Remotely-Conducted Observations at ULO</string>
    <string name="events_button_title3">When Art Meets Astronomy</string>
    <string name="event_content1">The close historical association between astronomy and timekeeping has been recognized by an invitation of affiliation from the Worshipful Company of Clockmakers
The affiliation was formally marked on 2013 January 24 at ULO, when the Master of the Clockmakers, Mark Elliott, presented the Clockmakers Shield of Arms to the President and Provost of UCL, Professor Malcolm Grant. We look forward to a long and fruitful relationship.</string>
    <string name="event_image1">event_image1</string>
</resources>