<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_marginBottom="10dp">
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    tools:context=".AboutActivity" >
    
    <TextView
        android:id="@+id/titleAdministration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#33b6ea"
        android:text="@string/staff_administration_title" />
    
    <TableLayout 
         android:id = "@+id/staffTable1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleAdministration"
         android:background="@drawable/shape"
         android:padding="10dp">

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff1"
             android:text="@string/staff1"
             android:layout_height="wrap_content"/>
     </TableRow>

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff2"
             android:text="@string/staff2"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff3"
             android:text="@string/staff3"
             android:layout_height="wrap_content"/>
     </TableRow>
</TableLayout>
    
	<TextView
        android:id="@+id/titleTeaching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#33b6ea"
        android:layout_below="@+id/staffTable1"
        android:text="@string/staff_teaching_title" />

	<TableLayout 
         android:id = "@+id/staffTable2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleTeaching"
         android:background="@drawable/shape"
         android:padding="10dp">

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff4"
             android:text="@string/staff4"
             android:layout_height="wrap_content"/>
     </TableRow>

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff5"
             android:text="@string/staff5"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff6"
             android:text="@string/staff6"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff7"
             android:text="@string/staff7"
             android:layout_height="wrap_content"/>
     </TableRow>
</TableLayout>
        
	<TextView
        android:id="@+id/titleSupportStaff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#33b6ea"
        android:layout_below="@+id/staffTable2"
        android:text="@string/staff_support_title" />

	<TableLayout 
         android:id = "@+id/staffTable3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleSupportStaff"
         android:background="@drawable/shape"
         android:padding="10dp">

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff8"
             android:text="@string/staff8"
             android:layout_height="wrap_content"/>
     </TableRow>

     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff9"
             android:text="@string/staff9"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff10"
             android:text="@string/staff10"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff11"
             android:text="@string/staff11"
             android:layout_height="wrap_content"/>
     </TableRow>
     <TableRow android:layout_height="wrap_content">
         <TextView
             android:id="@+id/staff12"
             android:text="@string/staff12"
             android:layout_height="wrap_content"/>
     </TableRow>
</TableLayout>

</RelativeLayout>
</ScrollView>