<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Event1" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/events_button_title1"
        android:textSize="30sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageView01"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:gravity="center"
        android:text="@string/event_content1"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ImageView01"
        android:contentDescription="@string/event_image1"
        android:layout_width="fill_parent"
        android:layout_height="450dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@raw/event1" />

</RelativeLayout>