<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView03"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="10dp" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    tools:context=".HistoryActivity" >
    
    <TextView
        android:id="@+id/titleUlotoday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#33b6ea"
        android:text="@string/history_ulotoday_button" />
 
	<TextView
        android:id="@+id/textUlotoday"
        android:layout_below="@+id/titleUlotoday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/history_ulotoday"
        style="@style/AboutTextStyle" /> 

	<ImageView
	    android:id="@+id/ulotodayImage"
	    android:layout_width="280dp"
	    android:layout_height="210dp"
	    android:layout_alignParentBottom="true"
	    android:layout_centerHorizontal="true"
	    android:layout_below="@+id/textUlotoday"
	    android:gravity="center"
	    android:src="@drawable/ulotoday" />
		
	<TextView
    	android:id="@+id/ulotodayImageText"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/ulotodayImage"
    	android:layout_alignBottom="@+id/ulotodayImage"  	
    	android:layout_marginLeft="10dp"
    	android:text="@string/history_ulotoday_image"
    	android:textStyle="bold"
    	android:textColor="#33b6ea" />
    

</RelativeLayout>
</ScrollView>