<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView03"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:layout_marginBottom="10dp" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    tools:context=".HistoryActivity" >
    
    <TextView
        android:id="@+id/titleFoundation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:textColor="#33b6ea"
        android:text="@string/history_foundation_button" />
 
	<TextView
        android:id="@+id/textFoundation"
        android:layout_below="@+id/titleFoundation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/history_foundation"
        style="@style/AboutTextStyle" />

	<ImageView
	    android:id="@+id/foundationImage"
	    android:layout_width="300dp"
	    android:layout_height="240dp"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentBottom="true"
	    android:layout_below="@+id/textFoundation"
	    android:gravity="center"
	    android:src="@drawable/ulofoundation" />
		
	<TextView
    	android:id="@+id/foundationImageText"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/foundationImage"
    	android:layout_alignBottom="@+id/foundationImage"  	
    	android:layout_marginLeft="8dp"
    	android:text="@string/history_foundation_image"
    	android:textStyle="bold"
    	android:textColor="#33b6ea" />
    	
</RelativeLayout>
</ScrollView>